--- a/tools/db_setup/my.cnf
+++ b/tools/db_setup/my.cnf
@@ -1,15 +1,45 @@
-# optimize fpki
-
+# Default Homebrew MySQL server config
 [mysqld]
+# Only allow connections from localhost
+bind-address = 127.0.0.1
+mysqlx-bind-address = 127.0.0.1
+max_allowed_packet=1G
 
-innodb_buffer_pool_size = 8589934592  # 8 GB
+# -------------------------------
+# config for memory and cpu
+# -------------------------------
+
+innodb_buffer_pool_size = 16GB  # 16 GB
+
 innodb_buffer_pool_instances = 64  # one per thread/connection
-
+innodb_thread_concurrency = 0
 innodb_write_io_threads = 64
 innodb_read_io_threads = 64
+
+# -------------------------------
+# config for log
+# -------------------------------
+
+general-log = 0 # disable general log for updating
+
+skip-log-bin # skip binary log
 
 sync_binlog = 0  # disable syncing the binary log to disk (better performance). The kernel will flush it from time to time.
 
 innodb_flush_method = "O_DIRECT"
 
 innodb_use_fdatasync = "ON"
+
+innodb_stats_on_metadata = 0
+
+key_buffer_size=0 # we are not using MyISAM table
+
+innodb_log_file_size = 2G
+
+innodb_log_files_in_group = 2
+
+innodb_log_buffer_size=2G
+
+innodb_buffer_pool_instances=1
+
+innodb_flush_log_at_trx_commit=2 
